[tool.poetry]
name = "scikit-vm"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
watermark = "*"
pydot3 = "*"
seaborn = "*"
jupyterlab = "*"
xgboost = "*"
lightgbm = "*"
optuna = "*"
umap-learn = "*"
papermill = "*"
TPOT = "*"
ipython = "*"
scikit-learn = "*"
black = {extras = ["jupyter"], version = "^22.1.0"}
jupytext = "*"
python-lsp-server = "*"
jupyter-console = "*"
lux-api = "*"
pandas-profiling = "^3.1.0"
yellowbrick = "^1.3.post1"
flake8 = "^4.0.1"
arviz = "^0.11.4"
pymc3 = "^3.11.4"
FLAML = "^0.10.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
