[tool.poetry]
name = "scikit-vm"
version = "0.1.0"
description = ""
authors = ["Gavin Noronha <gavinln@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "*"
watermark = "*"
pydot3 = "*"
seaborn = "*"
jupyterlab = "*"
xgboost = "*"
lightgbm = "*"
optuna = "*"
umap-learn = "*"
papermill = "*"
TPOT = "*"
ipython = "*"
scikit-learn = "*"
black = {extras = ["jupyter"], version = "^22.1.0"}
jupytext = "*"
python-lsp-server = "*"
jupyter-console = "*"
lux-api = "*"
pandas-profiling = "^3.1.0"
yellowbrick = ""
flake8 = "*"
arviz = "*"
pymc3 = "*"
FLAML = "*"
sklearn = "*"
bambi = "*"
vulture = "^2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.pyright]
include = ["notebooks"]
exclude = ["**/.ipynb_checkpoints"]
venvPath = "/home/gavin/.cache/pypoetry/virtualenvs"
venv = "scikit-vm-yif_eX-X-py3.8"
verboseOutput = true

